--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<head>
-<meta charset="UTF-8">
-</head>
-<body>
-    Hello World
-</body>
+---
+layout: default
+title: JD Broussard, Developer
+---
+<div class="blurb">
+	<h1>Hi there, I'm JD Broussard!</h1>
+	<a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
