Bootstrap rework and day1 effort

--- a/index.html
+++ b/index.html
@@ -2,7 +2,74 @@
 layout: default
 title: JD Broussard, Developer
 ---
-<div class="blurb">
-	<h1>Hi there, I'm JD Broussard!</h1>
-	<a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<div id="skyline" class="d-flex align-items-center">
+	<div class="container d-flex flex-column align-items-center">
+		<h1 class="skyline-text display-2 text-light text-center">JD Broussard</h1>
+		<h2 class="skyline-text text-light text-center">Software Engineer. Baltimorean. Gamer.</h2>
+		<a href="#skills"><button type="button" class="btn btn-outline-primary btn-lg">Learn More</button></a>
+	</div>
+</div>
+<div data-spy="scroll" data-target="#navbar" data-offset="0">
+	<div class="container-fluid bg-primary" id="skills">
+		<div class="container text-center">
+			<div class="row pt-3">
+				<div class="col-sm d-flex flex-column align-items-center">
+					<img class="img-fluid" src="assets/images/mortarboard.png" />
+					<p class="lead pt-3">Bachelor of Science in Computer Science<br /><a class="text-body" href="https://www.umbc.edu/">University of Maryland Baltimore County</a> - 2012</p>
+				</div>
+				<div class="col-sm d-flex flex-column align-items-center">
+					<img class="img-fluid" src="assets/images/networking.png" />
+					<p class="lead pt-3"><a class="text-body" href="https://ubuntu.com/server">Ubuntu</a>, 
+						<a class="text-body" href="https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux">RHEL</a>, 
+						<a class="text-body" href="https://www.centos.org/">CentOS</a>/<a class="text-body" href="https://getfedora.org/">Fedora</a>, 
+						<a class="text-body" href="https://www.docker.com/solutions/government">Docker</a>, <a class="text-body" href="https://kubernetes.io/">Kubernetes</a>, 
+						<a class="text-body" href="https://aws.amazon.com/">AWS</a>, <a class="text-body" href="https://azure.microsoft.com/en-us/">Azure</a>, 
+						<a class="text-body" href="https://www.microsoft.com/en-us/cloud-platform/windows-server">Windows</a>, <a class="text-body" href="https://www.vmware.com/products/vsphere.html">VMware</a>
+					</p>
+				</div>
+				<div class="col-sm d-flex flex-column align-items-center">
+					<img class="img-fluid" src="assets/images/code.png" />
+					<p class="lead pt-3"><a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a>, 
+						<a class="text-body" href="https://www.typescriptlang.org/">Typescript</a>, <a class="text-body" href="https://www.oracle.com/technetwork/java/javase/overview/index.html">Java</a>, 
+						<a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML5</a>/<a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS3</a>, 
+						<a class="text-body" href="https://www.gnu.org/software/bash/">BASH</a>, <a class="text-body" href="https://docs.microsoft.com/en-us/powershell/scripting/overview?view=powershell-6">Powershell</a>, 
+						<a class="text-body" href="https://www.yaml.org">YAML</a>, <a class="text-body" href="https://git-scm.com/">Git</a>, </p>
+				</div>
+				<div class="col-sm d-flex flex-column align-items-center">
+					<img class="img-fluid" src="assets/images/software.png" />
+					<p class="lead pt-3">Full-Stack Engineering, Blockchain, Enterprise Web Applications, Cybersecurity</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid bg-secondary" id="work">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+					One of three columns
+				</div>
+				<div class="col-sm">
+					One of three columns
+				</div>
+				<div class="col-sm">
+					One of three columns
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid bg-white" id="fun">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+					One of three columns
+				</div>
+				<div class="col-sm">
+					One of three columns
+				</div>
+				<div class="col-sm">
+					One of three columns
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
