--- a/index.html
+++ b/index.html
@@ -6,68 +6,98 @@ title: JD Broussard, Developer
 	<div class="container d-flex flex-column align-items-center">
 		<h1 class="skyline-text display-2 text-light text-center">JD Broussard</h1>
 		<h2 class="skyline-text text-light text-center">Software Engineer. Baltimorean. Gamer.</h2>
-		<a href="#skills"><button type="button" class="btn btn-outline-primary btn-lg">Learn More</button></a>
+		<a href="#skillsContainer"><button type="button" class="btn btn-outline-primary btn-lg">Learn More</button></a>
 	</div>
 </div>
 <div data-spy="scroll" data-target="#navbar" data-offset="0">
-	<div class="container-fluid bg-primary" id="skills">
+	<div class="container-fluid bg-primary" id="skillsContainer">
 		<div class="container text-center">
-			<div class="row pt-3">
-				<div class="col-sm d-flex flex-column align-items-center">
-					<img class="img-fluid" src="assets/images/mortarboard.png" />
-					<p class="lead pt-3">Bachelor of Science in Computer Science<br /><a class="text-body" href="https://www.umbc.edu/">University of Maryland Baltimore County</a> - 2012</p>
+			<div class="row">
+				<div class="col text-center"><h3 class="pt-3">What I've Worked With</h3></div>
+			</div>
+			<div class="row pt-5 lead" id="skills">
+				<div class="col d-flex flex-column align-items-center shadow-sm">
+					<img class="img-fluid " src="assets/images/mortarboard.png" />
+					<p class=" pt-3">Bachelor of Science in Computer Science<br /><a class="text-body" href="https://www.umbc.edu/">University of Maryland Baltimore County</a> - 2012</p>
 				</div>
-				<div class="col-sm d-flex flex-column align-items-center">
-					<img class="img-fluid" src="assets/images/networking.png" />
-					<p class="lead pt-3"><a class="text-body" href="https://ubuntu.com/server">Ubuntu</a>, 
+				<div class="col d-flex flex-column align-items-center shadow-sm">
+					<img class="img-fluid " src="assets/images/networking.png" />
+					<p class="pt-3"><a class="text-body" href="https://ubuntu.com/server">Ubuntu</a>, 
 						<a class="text-body" href="https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux">RHEL</a>, 
-						<a class="text-body" href="https://www.centos.org/">CentOS</a>/<a class="text-body" href="https://getfedora.org/">Fedora</a>, 
+						<a class="text-body" href="https://www.centos.org/">CentOS</a>, <a class="text-body" href="https://getfedora.org/">Fedora</a>, 
 						<a class="text-body" href="https://www.docker.com/solutions/government">Docker</a>, <a class="text-body" href="https://kubernetes.io/">Kubernetes</a>, 
 						<a class="text-body" href="https://aws.amazon.com/">AWS</a>, <a class="text-body" href="https://azure.microsoft.com/en-us/">Azure</a>, 
 						<a class="text-body" href="https://www.microsoft.com/en-us/cloud-platform/windows-server">Windows</a>, <a class="text-body" href="https://www.vmware.com/products/vsphere.html">VMware</a>
 					</p>
 				</div>
-				<div class="col-sm d-flex flex-column align-items-center">
-					<img class="img-fluid" src="assets/images/code.png" />
-					<p class="lead pt-3"><a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a>, 
+				<div class="col d-flex flex-column align-items-center shadow-sm">
+					<img class="img-fluid " src="assets/images/code.png" />
+					<p class="pt-3"><a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a>, 
 						<a class="text-body" href="https://www.typescriptlang.org/">Typescript</a>, <a class="text-body" href="https://www.oracle.com/technetwork/java/javase/overview/index.html">Java</a>, 
 						<a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML5</a>/<a class="text-body" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS3</a>, 
 						<a class="text-body" href="https://www.gnu.org/software/bash/">BASH</a>, <a class="text-body" href="https://docs.microsoft.com/en-us/powershell/scripting/overview?view=powershell-6">Powershell</a>, 
-						<a class="text-body" href="https://www.yaml.org">YAML</a>, <a class="text-body" href="https://git-scm.com/">Git</a>, </p>
+						<a class="text-body" href="https://www.python.org/">Python</a>, 
+						<a class="text-body" href="https://www.yaml.org">YAML</a>, <a class="text-body" href="https://git-scm.com/">Git</a>, 
+						<a class="text-body" href="https://code.visualstudio.com/">VS Code</a>
+					</p>
 				</div>
-				<div class="col-sm d-flex flex-column align-items-center">
+				<div class="col d-flex flex-column align-items-center shadow-sm">
 					<img class="img-fluid" src="assets/images/software.png" />
-					<p class="lead pt-3">Full-Stack Engineering, Blockchain, Enterprise Web Applications, Cybersecurity</p>
+					<p class="pt-3">
+						<a class="text-body" href="https://www.hyperledger.org/">Hyperledger Technologies</a>,
+						<a class="text-body" href="https://www.nginx.com/">NGINX</a>, <a class="text-body" href="http://tomcat.apache.org/">Tomcat</a>, 
+						<a class="text-body" href="https://wildfly.org/">Wildfly</a>, <a class="text-body" href="https://www.microsoft.com/en-us/sql-server/default.aspx">SQL Server</a>,
+						<a class="text-body" href="https://www.postgresql.org/">PostgreSQL</a>, <a class="text-body" href="https://www.mongodb.com/">MongoDB</a>, 
+						<a class="text-body" href="https://angular.io/">Angular</a>, <a class="text-body" href="https://www.atlassian.com/">Atlassian Suite</a>, 
+						<a class="text-body" href="https://jenkins.io/">Jenkins</a>
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-secondary" id="work">
+	<div class="container-fluid bg-dark text-light pb-3" id="work">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm">
-					One of three columns
+				<div class="col text-center"><h3 class="pt-3">Where I've Worked</h3></div>
+			</div>
+			<div id="companies" class="text-center lead pt-5">
+				<div class="shadow-sm">
+					<a href="http://www.exceptionalsoftware.com"><img class="img-fluid" src="assets/images/ess.png"></a>
+					<p>2018-Present: Software Engineer, System Administrator, IT Support</p>
 				</div>
-				<div class="col-sm">
-					One of three columns
+				<div class="shadow-sm">
+					<!--<img class="img-fluid" src="assets/images/saic.svg"> -->
+					<a href="https://www.leidos.com/"><img class="img-fluid" src="assets/images/leidos.svg"></a>
+					<p>2009-2013, 2017-2018: Computer Science Intern, Systems Engineer, Software Engineer</p>
 				</div>
-				<div class="col-sm">
-					One of three columns
+				<div class="shadow-sm">
+					<a href="https://chirontech.com/"><img class="img-fluid" src="assets/images/chiron.svg"></a>
+					<p>2013-2017: Software Engineer</p>
+				</div>
+				<div class="shadow-sm">
+					<a href="https://www.nsa.gov/"><img class="img-fluid" src="assets/images/nsa.png"></a>
+					<p>2008-2009: High School Work Study</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-white" id="fun">
-		<div class="container">
+	<div class="container-fluid bg-white" >
+		<div class="container pt-3">
 			<div class="row">
-				<div class="col-sm">
-					One of three columns
+				<div class="col text-center"><h3 class="pt-3">What I do for fun</h3></div>
+			</div>
+			<div class="row lead text-center pt-5" id="fun">
+				<div class="col-sm shadow-sm">
+					<img class="img-fluid" src="assets/images/american-football.png" />
+					<p>Go Ravens! Go Caps! Go Os!</p>
 				</div>
-				<div class="col-sm">
-					One of three columns
+				<div class="col-sm shadow-sm">
+					<img class="img-fluid" src="assets/images/music-player.png" />
+					<p>Listening to music and attending concerts</p>
 				</div>
-				<div class="col-sm">
-					One of three columns
+				<div class="col-sm shadow-sm">
+					<img class="img-fluid" src="assets/images/game-controller.png" />
+					<p>PC Gaming - FPS, RPGs, MOBA, Sports Games, Esports</p>
 				</div>
 			</div>
 		</div>
